Fixed a couple of small spacing issues in the title.
git-svn-id: https://plugins.svn.wordpress.org/editorial-calendar/trunk@175598 b8457f37-d9ea-0310-8a92-e5e31aec5664

--- a/edcal.css
+++ b/edcal.css
@@ -115,14 +115,14 @@
     position: absolute;
     left: 10px;
     top: -14px;
-    width: 50%;
+    width: auto;
 }
 
 #topright {
     position: absolute;
-    left: 75%;
+    right: 2em;
     top: 0px;
-    width: 25%;
+    width: auto;
     text-align: right;
 }
 
